--- a/naive bayes classifier.ipynb
+++ b/naive bayes classifier.ipynb
@@ -411,6 +411,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The score(prob.) of text belong to that cate\n",
+    "#Normally, if score > 0 mean that text belong to that cate"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
